2006-04-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/parser.yy (Generic_prefix_music_scm): append lists, not objects.

	* scm/backend-library.scm (search-gs): oops.

2006-04-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (output): use base, not filename for href.

	* scm/backend-library.scm: only look for gs.

	* scripts/lilypond-book.py (output): fix printfilename.

	* lily/parser.yy (music_function_musicless_prefix): fold together
	definitions of signature (SCM*) (Music|post_event|chord_body_element)

	* lily/slur.cc (print): only set font-size if not set yet.

	* lily/slur-configuration.cc (add_score): improved layout of debug
	scoring output.

2006-04-05  David Feuer  <David.Feuer@gmail.com>

	* music-drawing-routines.ps (draw_round_box): removed testing artifact.
	(draw_circle): Hopefully fixed regression.
	Improved documentation for several procedures.
	
2006-03-04  Werner Lemberg  <wl@gnu.org>

	* ly/engraver-init.ly (\Score): Add beam-event to quotedEventTypes.

2006-04-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/musicxml2ly.py (bindir): add dynamic
	relocation. 

2006-04-04  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ basic-notation, advanced-notation, putting,
	instrument-notation, invoking, lilypond, THANKS: another ream of small
	fixes from the Doc Helpers.

2006-04-03  David Feuer  <David.Feuer@gmail.com>

	* music-drawing-routines.ps: remove superfluous gsave/grestore pairs.

	* lilyponddefs.ps (set-ps-scale-to-lily-scale): Fixed code duplication.

	* Cleaned up interfaces between PostScript and Scheme, and moved
	computations from PostScript to Scheme:

	* music-drawing-routines.ps
	(*SF, stroke_and_fill): new procedures.  Replaced stroke and fill
	with stroke_and_fill throughout.
	(euclidean_length, print_letter, draw_box): Deleted unused
	procedures.  If someone needs draw_box, implement it using
	draw_round_box; don't duplicate code.