@@ -1,3 +1,9 @@
+2006-04-08  Graham Percival  <gpermus@gmail.com>
+
+	* scm/define-grob-properties.scm: clarify docs for #'direction.
+
+	* scm/define-context-properties.scm: update old \property override.
+
 2006-04-07  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* lily/parser.yy (Generic_prefix_music_scm): append lists, not objects.
